--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.github.manuelpeinado.fadingactionbar</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <name>Android-FadingActionBar (Parent)</name>
     <description>Android library implementing a fading effect for the action bar, similar to the one found in the Play Music app</description>
