--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
                 <artifactId>actionbarsherlock</artifactId>
                 <version>4.3.1</version>
                 <type>apklib</type>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.google.android</groupId>
+                        <artifactId>support-v4</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
         </dependencies>
