--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,9 @@
 
     <modules>
         <module>library</module>
+        <!-- Disabled until r13 of the support library is on maven central 
         <module>sample</module>
+        --> 
     </modules>
 
     <scm>
@@ -82,16 +84,16 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.android</groupId>
+                <artifactId>support-v4</artifactId>
+                <version>${android.support.version}</version>
+            </dependency>
+            
+            <dependency>
                 <groupId>com.actionbarsherlock</groupId>
                 <artifactId>actionbarsherlock</artifactId>
                 <version>4.3.1</version>
                 <type>apklib</type>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.google.android</groupId>
-                        <artifactId>support-v4</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
         </dependencies>
