--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>android</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.google.android</groupId>
+			<artifactId>support-v4</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.manuelpeinado.fadingactionbar</groupId>
