--- a/sample/AndroidManifest.xml
+++ b/sample/AndroidManifest.xml
@@ -57,6 +57,11 @@
             android:icon="@drawable/ic_location_map"
             android:label="@string/choose_city"
             android:theme="@style/AppTheme.TranslucentActionBar" />
-    </application>
+        <activity
+            android:name="com.manuelpeinado.fadingactionbar.demo.HeaderOverlayActivity"
+            android:icon="@drawable/ic_location_map"
+            android:label="@string/new_york_city"
+            android:theme="@style/AppTheme.TranslucentActionBar" />
+        </application>
 
 </manifest>
