--- a/sample/AndroidManifest.xml
+++ b/sample/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:icon="@drawable/ic_location_map"
             android:label="@string/new_york_city"
             android:theme="@style/AppTheme.TranslucentActionBar" />
-        </application>
+        <activity
+            android:name="com.manuelpeinado.fadingactionbar.demo.DatasetChangeActivity"
+            android:icon="@drawable/ic_location_map"
+            android:label="@string/new_york_city"
+            android:theme="@style/AppTheme.TranslucentActionBar" />
+    </application>
 
 </manifest>
