Adds support for header overlays

--- a/samples/actionbarsherlock/AndroidManifest.xml
+++ b/samples/actionbarsherlock/AndroidManifest.xml
@@ -57,6 +57,11 @@
             android:icon="@drawable/ic_location_map"
             android:label="@string/choose_city"
             android:theme="@style/AppTheme.TranslucentActionBar" />
+        <activity
+              android:name="com.manuelpeinado.fadingactionbar.samples.actionbarsherlock.HeaderOverlayActivity"
+              android:icon="@drawable/ic_location_map"
+              android:label="@string/new_york_city"
+              android:theme="@style/AppTheme.TranslucentActionBar" />
     </application>
 
 </manifest>
