--- a/samples/stock/AndroidManifest.xml
+++ b/samples/stock/AndroidManifest.xml
@@ -62,6 +62,11 @@
               android:icon="@drawable/ic_location_map"
               android:label="@string/new_york_city"
               android:theme="@style/AppTheme.TranslucentActionBar" />
-    </application>
+         <activity
+              android:name="com.manuelpeinado.fadingactionbar.demo.ViewPagerActivity"
+              android:icon="@drawable/ic_location_map_dark"
+              android:label="@string/new_york_city"
+              android:theme="@style/AppTheme.Light.TranslucentActionBar" />
+         </application>
 
 </manifest>
