--- a/samples/actionbarcompat/AndroidManifest.xml
+++ b/samples/actionbarcompat/AndroidManifest.xml
@@ -4,9 +4,11 @@
     android:versionName="3.0.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -57,5 +59,11 @@
               android:icon="@drawable/ic_location_map"
               android:label="@string/new_york_city"
               android:theme="@style/AppTheme.TranslucentActionBar" />
+         <activity
+              android:name="com.manuelpeinado.fadingactionbar.samples.actionbarcompat.WebViewActivity"
+              android:icon="@drawable/ic_location_map"
+              android:label="@string/new_york_city"
+              android:theme="@style/AppTheme.TranslucentActionBar"
+              android:screenOrientation="portrait" />
     </application>
 </manifest>
