--- a/samples/actionbarsherlock/AndroidManifest.xml
+++ b/samples/actionbarsherlock/AndroidManifest.xml
@@ -4,8 +4,10 @@
     android:versionName="3.0.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -57,6 +59,12 @@
               android:icon="@drawable/ic_location_map"
               android:label="@string/new_york_city"
               android:theme="@style/AppTheme.TranslucentActionBar" />
+         <activity
+              android:name="com.manuelpeinado.fadingactionbar.samples.actionbarsherlock.WebViewActivity"
+              android:icon="@drawable/ic_location_map"
+              android:label="@string/new_york_city"
+              android:theme="@style/AppTheme.TranslucentActionBar"
+              android:screenOrientation="portrait" />
     </application>
 
 </manifest>
