--- a/samples/stock/AndroidManifest.xml
+++ b/samples/stock/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -62,6 +64,12 @@
               android:icon="@drawable/ic_location_map"
               android:label="@string/new_york_city"
               android:theme="@style/AppTheme.TranslucentActionBar" />
+         <activity
+              android:name="com.manuelpeinado.fadingactionbar.demo.WebViewActivity"
+              android:icon="@drawable/ic_location_map"
+              android:label="@string/new_york_city"
+              android:theme="@style/AppTheme.TranslucentActionBar"
+              android:screenOrientation="portrait" />
     </application>
 
 </manifest>
