--- a/samples/stock/AndroidManifest.xml
+++ b/samples/stock/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.manuelpeinado.fadingactionbar.demo"
-    android:versionCode="311"
-    android:versionName="3.1.1" >
+    android:versionCode="312"
+    android:versionName="3.1.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +20,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -58,17 +59,22 @@
             android:icon="@drawable/ic_location_map"
             android:label="@string/choose_city"
             android:theme="@style/AppTheme.TranslucentActionBar" />
-         <activity
-              android:name="com.manuelpeinado.fadingactionbar.demo.HeaderOverlayActivity"
-              android:icon="@drawable/ic_location_map"
-              android:label="@string/new_york_city"
-              android:theme="@style/AppTheme.TranslucentActionBar" />
-         <activity
-              android:name="com.manuelpeinado.fadingactionbar.demo.WebViewActivity"
-              android:icon="@drawable/ic_location_map"
-              android:label="@string/new_york_city"
-              android:theme="@style/AppTheme.TranslucentActionBar"
-              android:screenOrientation="portrait" />
+        <activity
+            android:name="com.manuelpeinado.fadingactionbar.demo.HeaderOverlayActivity"
+            android:icon="@drawable/ic_location_map"
+            android:label="@string/new_york_city"
+            android:theme="@style/AppTheme.TranslucentActionBar" />
+        <activity
+            android:name="com.manuelpeinado.fadingactionbar.demo.WebViewActivity"
+            android:icon="@drawable/ic_location_map"
+            android:label="@string/new_york_city"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.TranslucentActionBar" />
+        <activity
+            android:name="com.manuelpeinado.fadingactionbar.demo.ShortContentActivity"
+            android:icon="@drawable/ic_location_map"
+            android:label="@string/new_york_city"
+            android:theme="@style/AppTheme.TranslucentActionBar" />
     </application>
 
 </manifest>
