--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,8 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=manuelpeinado
 POM_DEVELOPER_NAME=Manuel Peinado
+
+ANDROID_BUILD_TOOLS_VERSION=19.0.3
+ANDROID_COMPILE_SDK_VERSION=19
+ANDROID_TARGET_SDK_VERSION=19
+ANDROID_MIN_SDK=4
