--- a/samples/actionbarsherlock/AndroidManifest.xml
+++ b/samples/actionbarsherlock/AndroidManifest.xml
@@ -4,8 +4,7 @@
     android:versionName="3.1.2" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="8"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
