--- a/samples/stock/AndroidManifest.xml
+++ b/samples/stock/AndroidManifest.xml
@@ -4,8 +4,7 @@
     android:versionName="3.1.2" >
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="14"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
 
