--- a/samples/stock/AndroidManifest.xml
+++ b/samples/stock/AndroidManifest.xml
@@ -4,6 +4,7 @@
     android:versionName="3.1.2" >
 
     <uses-sdk
+        android:targetSdkVersion="19"
         android:minSdkVersion="14"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
