--- a/extras-actionbarsherlock/build.gradle
+++ b/extras-actionbarsherlock/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android-library'
 
 dependencies {
     compile project(':library')
-    compile "com.android.support:support-v4:[19.0,)"
+    compile "com.android.support:support-v4:20.+"
     compile ("com.actionbarsherlock:actionbarsherlock:[4.4,)@aar") {
         // Need to specifically exclude this as it is specified in ActionBarSherlock pom
         exclude group: 'com.google.android', module: 'support-v4'
